Removes usage of deprecated constructor